portus/portus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: portus
  labels:
    name: portus
    app: portus
    release: "2.4"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: portus
  template:
    metadata:
      labels:
        name: portus
        release: "2.4"
    spec:
      containers:
        - name: "portus"
          image: "opensuse/portus:2.4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /api/v1/_ping
              port: 3000
            initialDelaySeconds: 240
            timeoutSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: secrets
              mountPath: /secrets
            - name: certificates
              mountPath: /certificates
            - name: config
              mountPath: /srv/Portus/config/config-local.yml
              subPath: etc/config-local.yml
              readOnly: true
        - name: "portus-background"
          image: "opensuse/portus:2.4"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: secrets
              mountPath: /secrets
      volumes:
        - name: secrets
          secret:
            secretName: portus-sec
            items:
              - key: key
                path: portus.key
        - name: certificates
          secret:
            secretName: portus-sec
            items:
              - key: cert
                path: portus.crt
        - name: config
          configMap:
            name: portus
            items:
              - key: config
                path: etc/config-local.yml
