portus/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: portus
  name: portus-registry
  annotations:
  labels:
    name: portus-registry
    app: portus
    release: "2.4"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: portus-registry
  template:
    metadata:
      labels:
        name: portus-registry
        release: "2.4"
    spec:
      containers:
        - name: portus-registry
          image: "horakmar/registry:2.m1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
            - containerPort: 5001
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: certvol
              mountPath: /certificates
            - name: config
              mountPath: /etc/docker/registry
              readOnly: true
            - name: storage
              mountPath: /storage
      volumes:
        - name: certvol
          secret:
            secretName: portus-sec
            items:
            - key: key
              path: portus.key
            - key: cert
              path: portus.crt
            - key: certchain
              path: portus-bundle.crt
        - name: config
          configMap:
            name: portus-registry
            items:
              - key: config
                path: config.yml
        - name: storage
          persistentVolumeClaim:
            claimName: portus-registry
