portus/registry.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: portus-registry
  annotations:
  labels:
    name: portus-registry
    app: portus
    release: "2.4"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: portus-registry
  template:
    metadata:
      labels:
        name: portus-registry
        release: "2.4"
    spec:
      containers:
        - name: portus-registry
          image: "library/registry:2"
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", "cp /certificates/portus.crt /certificates/portus-bundle.crt /usr/local/share/ca-certificates;update-ca-certificates;registry serve /etc/docker/registry/config.yml"]
          ports:
            - containerPort: 5000
            - containerPort: 5001
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: certvol
              mountPath: /certificates
            - name: config
              mountPath: /etc/docker/registry
              readOnly: true
            - name: storage
              mountPath: /storage
      volumes:
        - name: certvol
          secret:
            secretName: portus-sec
            items:
            - key: key
              path: portus.key
            - key: cert
              path: portus.crt
            - key: certchain
              path: portus-bundle.crt
        - name: config
          configMap:
            name: portus-registry
            items:
              - key: config
                path: config.yml
        - name: storage
          persistentVolumeClaim:
            claimName: portus-registry
