portus/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: portus
  name: portus-nginx
  labels:
    app: portus
    release: "2.4"
spec:
  selector:
    name: portus-nginx
  type: LoadBalancer
  loadBalancerIP: 172.28.112.231
  ports:
    - name: portus
      port: 443
