portus/portus-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: portus
  name: portus
  labels:
    app: portus
    release: "2.4"
spec:
  selector:
    name: portus
  ports:
    - name: portus
      port: 3000
