portus/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: portus
  name: portus-registry
  labels:
    app: portus
    release: "2.4"
spec:
  selector:
    name: portus-registry
  ports:
    - name: repo
      port: 5000
    - name: debug
      port: 5001
